# codify

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  LANGUAGE.md  Makefile  README.md  example.md  pyproject.toml
.github/workflows/: check-duplicates.yml
docs/adr/: 001-drop-pseudo-extension-and-cli.md  002-duplicate-files-in-skill-bundle.md  README.md  template.md
skills/codify/: SKILL.md
skills/codify/assets/examples/: example.pseudo
skills/codify/references/: LANGUAGE.md
src/codify/: __init__.py  __main__.py  cli.py
