[project]
name = "codify"
version = "0.1.0"
description = "A prompt-centric DSL preprocessor — strip comments from .pseudo files"
readme = "README.md"
authors = [{ name = "Davi Macêdo Gomes", email = "dev.davi.macedo.gomes@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
codify = "codify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codify"]
