[project]
name = "codify"
version = "0.1.0"
description = "A prompt-centric DSL for LLM-driven workflows"
readme = "README.md"
authors = [{ name = "Davi Macêdo Gomes", email = "dev.davi.macedo.gomes@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codify"]
